Fixed issue with overflowing post navigation buttons.

--- a/themes/vantage/trunk/style.less
+++ b/themes/vantage/trunk/style.less
@@ -1245,6 +1245,12 @@ article.page{
 
 .site-content {
 
+	overflow-x: hidden;
+
+	.nav-previous, .nav-next {
+		white-space: nowrap;
+	}
+
 	.nav-previous {
 		float: left;
 		width: 50%;
@@ -1256,6 +1262,19 @@ article.page{
 		width: 50%;
 	}
 
+}
+
+@media (max-width:480px) {
+	body.responsive {
+		.site-content{
+			.nav-previous, .nav-next {
+				float: none;
+				width: 100%;
+				margin-bottom: 20px;
+				text-align: center;
+			}
+		}
+	}
 }
 
 /* =Comments
